@@ -108,7 +108,7 @@ class RemoteQuickPayV10Test < Test::Unit::TestCase
   def test_failed_capture
     assert response = @gateway.capture(@amount, '1111')
     assert_failure response
-    assert_equal 'Unknown error - please contact QuickPay', response.message
+    assert_equal 'Not found: No Payment with id 1111', response.message
   end
 
   def test_successful_purchase_and_void
@@ -172,6 +172,23 @@ class RemoteQuickPayV10Test < Test::Unit::TestCase
     assert_success store
     assert purchase = @gateway.purchase(@amount, store.authorization, @options)
     assert_success purchase
+  end
+
+  def test_successful_store_and_reference_recurring_purchase
+    assert store = @gateway.store(@valid_card, @options)
+    assert_success store
+    assert signup = @gateway.purchase(@amount, store.authorization, @options)
+    assert_success signup
+    @options[:order_id] = generate_unique_id[0...10]
+    assert renewal = @gateway.purchase(@amount, store.authorization, @options)
+    assert_success renewal
+  end
+
+  def test_successful_store_and_reference_authorize
+    assert store = @gateway.store(@valid_card, @options)
+    assert_success store
+    assert authorization = @gateway.authorize(@amount, store.authorization, @options)
+    assert_success authorization
   end
 
   def test_successful_unstore
